--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,19 +17,14 @@
                 <span class="oi oi-car" aria-hidden="true"></span> Cadastro de Carros
             </NavLink>
         </li>
-            <li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="cadastro-abastecimento">
-                <span class="oi oi-car" aria-hidden="true"></span> Abastecimentos
+                <span class="oi oi-dropbox" aria-hidden="true"></span> Abastecimentos
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="estatisticas">
+                <span class="oi oi-graph" aria-hidden="true"></span> Estatísticas
             </NavLink>
         </li>
     </ul>
